--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,12 +1,6 @@
 name: Laravel Github Actions
 
-on:
-  push:
-    branches:
-      - development
-  pull_request:
-    branches:
-      - main
+on:[push]
   
 jobs:
   testing:
